<?xml version="1.0"?>
<package>
  <name>xpider_descriptions</name>
  <version>0.0.0</version>
  <description>The xpider_descriptions package</description>

  <maintainer email="minipada@gmail.com">david</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
