<?xml version="1.0"?>
<package>
  <name>xpider_gazebo</name>
  <version>0.0.0</version>
  <description>The xpider_gazebo package</description>

  <maintainer email="minipada@gmail.com">David Bensoussan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rrbot_control</run_depend>
  <run_depend>rrbot_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>

  </export>
</package>
